# core/models/operationRefView.go
@@ -1,15 +1,0 @@
-package models
-
-type OperationRefView struct {
-  Name string
-}
-
-func NewOperationRefView(
-name string,
-) *OperationRefView {
-
-  return &OperationRefView{
-    Name:name,
-  }
-
-}
