# core/models/operationRunView.go
@@ -1,10 +1,0 @@
-package models
-
-type OperationRunView struct {
-  Id                *string
-  OperationName     string
-  SubOperations     []*SubOperationRunView `json:",omitempty"`
-  StartedAtUnixTime int64
-  EndedAtUnixTime   int64
-  ExitCode          int
-}
